--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <title>סיכום - פשוט לקרוא חכם</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="index.css" />
+    <!-- Add Babel for in-browser JSX/TSX transformation -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="importmap">
       {
         "imports": {
-          "@google/genai": "https://esm.sh/@google/genai@^0.7.0",
           "react": "https://esm.sh/react@^19.0.0",
           "react/": "https://esm.sh/react@^19.0.0/",
           "react-dom/": "https://esm.sh/react-dom@^19.0.0/"
         }
       }
     </script>
-  <link rel="stylesheet" href="/index.css">
-</head>
+  </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="index.tsx"></script>
-  <script type="module" src="/index.tsx"></script>
-</body>
+    <!-- Change script type to text/babel for Babel to process -->
+    <script type="text/babel" data-type="module" src="index.tsx"></script>
+  </body>
 </html>
